# heuriboost

./: .gitignore  CODEBUDDY.md  CONTEXT.md  README.md  README.zh-CN.md
.trellis/: .template-hashes.json
plugins/heuriboost/skills/heuriboost-rag/: SKILL.md  pyproject.toml  requirements-build.txt
plugins/heuriboost/skills/heuriboost-rag/scripts/: __init__.py  build_fiqa_csv.py  common.py  eval_reranker.py  migrate_reckless_state.py  promote_repair.py  ranking_api.py  ranking_snapshot.py  reckless_autopilot.py  repair_cases.py  repair_reranker.py  run_ablation.py  run_discover_candidates.py  run_hpo.py  train_reranker.py  validate_dataset.py
plugins/heuriboost/skills/heuriboost-rag/scripts/features/: __init__.py  primitives.py  registry.py
plugins/heuriboost/skills/heuriboost-rag/scripts/hpo/: __init__.py  engine.py  optuna_backend.py
plugins/heuriboost/skills/heuriboost-rag/src/heuriboost_rag/adapters/: __init__.py  cli.py  workspace.py
plugins/heuriboost/skills/heuriboost-rag/src/heuriboost_rag/backends/: base.py  legacy_runtime.py  ranking.py  xgboost_rag.py
plugins/heuriboost/skills/heuriboost-rag/src/heuriboost_rag/importers/: __init__.py  base.py  csv_importer.py  jsonl_importer.py  xlsx_importer.py
plugins/heuriboost/skills/heuriboost-rag/src/heuriboost_rag/reckless/: contracts.py  errors.py  hashing.py  migration.py  orchestrator.py  policy.py  promotion.py  release_store.py  report.py  state.py  storage.py
plugins/heuriboost/skills/heuriboost-rag/templates/: __init__.py  feature_recipes.yaml  heuriboost-workspace.yml  promotion_gate.yaml  query_doc_examples.csv  reckless_policy.yml
(+187 files in other folders)
